Prueba subida Nico

--- a/PRUEBA.ipynb
+++ b/PRUEBA.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Hello world!\n"
+      "Nico aprendiendo GitHub\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Nico aprendiendo GitHub\")"
+    "print('Nico aprendiendo GitHub')"
    ]
   },
   {
@@ -50,9 +41,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
