--- a/EMAILS_HISTORICO_COMPROMISO.ipynb
+++ b/EMAILS_HISTORICO_COMPROMISO.ipynb
@@ -95,6 +95,7 @@
     }
    ],
    "source": [
+    "# Aca se descargan los archivos de los mails que contengan como asunto los reportes de compromiso\n",
     "subject = \"Compromisos: reporte\"\n",
     "sent_from = \"datos.mopc@gmail.com\"\n",
     "download_path =\"excels_compromiso/\"\n",
@@ -202,6 +203,7 @@
     "import os\n",
     "import re \n",
     "\n",
+    "#aca abrimos los archivos que guardamos\n",
     "df = None\n",
     "\n",
     "for i,file in enumerate(os.listdir('excels_compromiso/')):\n",
@@ -416,6 +418,8 @@
     }
    ],
    "source": [
+    "#estasson modificaciones de fomratos\n",
+    "\n",
     "import datetime\n",
     "print(type(df['FECHA']))\n",
     "b = df[ df['FECHA'].dt.strftime('%Y-%d-%m') ==  '2021-06-05']\n",
@@ -436,6 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#esto es una conexion falsa a una base de datos. Lo hago para convertir el dataframe a formato de tabla sql\n",
     "from sqlalchemy import create_engine\n",
     "engine = create_engine('sqlite://', echo=False)\n",
     "df.to_sql('Tabla',con=engine)"
@@ -1464,30 +1469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(df['FECHA'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#genero la conexion real con la db\n",
     "cnxn = connect_database()"
    ]
   },
@@ -1497,14 +1483,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#inserto la tabla que cree en la db\n",
     "cursor = cnxn.cursor()\n",
     "for i in a:\n",
     "    print(i)\n",
-    "    query = f\"INSERT INTO ACTIVE.DBO.COMPROMISOS_HISTORICO (IDCLIENTE, FECHA, [Fecha de pago], NOMBRE, IDMOROSO, FILTROA, AMOUNT, PROVINCIA, IDOPERADOR, GRUPO, ESTADOINICIAL, ESTADOFINAL, FASIGNACION, STATUS) VALUES {i}\"\n",
+    "    query = f\"INSERT INTO ACTIVE.DBO.COMPROMISOS_HISTORICO  ESTADOINICIAL, ESTADOFINAL, FASIGNACION, STATUS) VALUES {i}\"\n",
     "    cursor.execute(query)\n",
     "    cnxn.commit()\n",
     "    print('Insert Finish!')\n",
     "cnxn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_in_db():\n",
+    "    "
    ]
   }
  ],
