--- a/AUTOMATIZACION_TABLEROS.ipynb
+++ b/AUTOMATIZACION_TABLEROS.ipynb
@@ -65,22 +65,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.functions_ia import *\n",
-    "from gspread_formatting  import *\n",
+    "import time\n",
     "\n",
     "#me me conecto a la spreadsheet y agarro sus datos\n",
     "key = \"1Ed0M09j0yk2LCLU0sBmAUximavxcZoesNmDd1w25TC8\"\n",
     "sheet_name = \"REFI (PAG_UNIF)\"\n",
+    "sheet_name2 = \"REFI(HISTORICO)\"\n",
     "gc = connect_spreadsheets()\n",
     "sh = gc.open_by_key(key)\n",
     "worksheet = sh.worksheet(sheet_name)\n",
+    "worksheet2 = sh.worksheet(sheet_name2)\n",
     "\n",
     "wks_data = worksheet.get_all_values() #es una lista de listas de cada fila del spreadsheet\n",
-    "\n"
+    "\n",
+    "#me conecto a la base de datos\n",
+    "cnxn = connect_database() #genero la conexion con la db\n",
+    "\n",
+    "#inserto los datos de la spreadsheet en la db\n",
+    "cursor = cnxn.cursor()\n",
+    "\n",
+    "#agarro el ultimo id pago \n",
+    "query_ = \"SELECT MAX(ID_PAGO) FROM ACTIVE.DBO.[PAGOS_UNIFICADOS] WHERE TIPO_PAGO ='REFI'\"\n",
+    "max_id_pago = cursor.execute(query_).fetchall()[0][0] #el ultimo id_pagos\n",
+    "\n",
+    "\n",
+    "#me conecto a la base de datos\n",
+    "cols = wks_data[0]\n",
+    "\n",
+    "#supervisores  gente a la que se le envia el mail en caso exitoso\n",
+    "supervisores = ['vanessa.fondado@mopc.cc','nicolas.rodriguez@mopc.cc','luis.castillo@mopc.cc','esteban.encina@mopc.cc','Nicolas.Caruso@mopc.cc']\n",
+    "\n",
+    "\n",
+    "resultados= []\n",
+    "\n",
+    "#inserto fila por fila en la base de datos\n",
+    "n = 0\n",
+    "for i in range(1,len(wks_data)):\n",
+    "    values = wks_data[i]\n",
+    "    values[cols.index('FECHA_CARGA')] = time.strftime(\"%Y-%d-%m %H:%M:%S\", time.localtime()) # fecha carga el tiempo actual\n",
+    "    values[cols.index('ID_PAGO')] = max_id_pago + i #le iserto el id-pago\n",
+    "    values[cols.index('EMPRESA')] = 'MO&PC' #este valor es fijo\n",
+    "    values[cols.index('TIPO_PAGO')] = 'REFI' #este valor es fijo\n",
+    "    print(values)\n",
+    "    fecha_pago = values[cols.index(\"FECHA_PAGO\")]\n",
+    "    idmoroso = values[cols.index(\"IDMOROSO\")]\n",
+    "    query = f\"BEGIN IF NOT EXISTS (SELECT * FROM ACTIVE.DBO.PAGOS_UNIFICADOS WHERE TIPO_PAGO ='REFI' AND FECHA_PAGO = '{fecha_pago}' AND IDMOROSO = '{idmoroso}') BEGIN INSERT INTO ACTIVE.DBO.PAGOS_UNIFICADOS (FUENTE_PAGO, ID_PAGO, RUC, FECHA_PAGO, FECHA_REMESA, DESTINATARIO, IDCLIENTE, IDMOROSO, MONTO, HONORARIOS, FILTROA, FILTROB, FILTROC,DEUDA_TOTAL, DEUDA_VENCIDA, TIPO_PAGO, FECHA_CARGA, EMPRESA) VALUES {tuple(values)} END END\"\n",
+    "    try:\n",
+    "        print(n)\n",
+    "        cursor.execute(query)\n",
+    "        cnxn.commit()\n",
+    "        print('Insert Finish!')\n",
+    "        #worksheet2.resize(1)\n",
+    "        worksheet2.append_row(values)\n",
+    "        worksheet.delete_row(i+1 - n)\n",
+    "        n = n+1\n",
+    "        resultados.append(1)\n",
+    "    except: \n",
+    "        print(\"No se pudo insertar\")\n",
+    "        resultados.append(0)\n",
+    "\n",
+    "print(resultados)\n",
+    "# me fijo si todas las filas fueron insertadas correctamente. Si no, se envia un mail automatico avisando\n",
+    "if sum(resultados) == len(wks_data) - 1:\n",
+    "            send_mail(subject = \"REFIS: carga correcta\",\n",
+    "        body = \"Estimados, <br> Las REFIS fueron cargadas correctamente a las base de datos.<br><br>  Este correo se envía con frecuencias semanal y es automático. <br> Cualquier duda o consulta, comunicarse con ia@mopc.cc <br> Atte. <br> Equipo de Inteligencia Artificial\" ,\n",
+    "receivers=['lulikad@hotmail.com'], sender=None)\n",
+    "else: \n",
+    "    send_mail(subject = \"REFIS: error\",\n",
+    "        body = \"Estimados, <br> Las REFIS no fueron cargadas correctamente. La<br><br>  Este correo se envía con frecuencias semanal y es automático. <br> Cualquier duda o consulta, comunicarse con ia@mopc.cc <br> Atte. <br> Equipo de Inteligencia Artificial\" ,\n",
+    "receivers=['lulikad@hotmail.com'] , sender=None)\n",
+    "\n",
+    "cnxn.close()"
    ]
   },
   {
@@ -89,58 +157,195 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Worksheet' object has no attribute 'row'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-6821fff97c9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mworksheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Worksheet' object has no attribute 'row'"
-     ]
-    }
-   ],
-   "source": [
-    "worksheet.row(1).format()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "{'spreadsheetId': '1Ed0M09j0yk2LCLU0sBmAUximavxcZoesNmDd1w25TC8',\n",
-       " 'replies': [{}]}"
+       "['FUENTE_PAGO',\n",
+       " 'ID_PAGO',\n",
+       " 'RUC',\n",
+       " 'FECHA_PAGO',\n",
+       " 'FECHA_REMESA',\n",
+       " 'DESTINATARIO',\n",
+       " 'IDCLIENTE',\n",
+       " 'IDMOROSO',\n",
+       " 'MONTO',\n",
+       " 'HONORARIOS',\n",
+       " 'FILTROA',\n",
+       " 'FILTROB',\n",
+       " 'FILTROC',\n",
+       " 'DEUDA_TOTAL',\n",
+       " 'DEUDA_VENCIDA',\n",
+       " 'TIPO_PAGO',\n",
+       " 'FECHA_CARGA',\n",
+       " 'EMPRESA']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "wks_data[1][7]\n",
+    "wks_data[0]\n",
+    "\n",
+    " (FUENTE_PAGO, ID_PAGO, RUC, FECHA_PAGO, FECHA_REMESA, DESTINATARIO, IDCLIENTE, IDMOROSO, MONTO, HONORARIOS, FILTROA, FILTROB, FILTROC,DEUDA_TOTAL, DEUDA_VENCIDA, TIPO_PAGO, FECHA_CARGA, EMPRESA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['OP_BBVA', 453, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 26439133', '75700', '', '2 - Ag 2ra', 'RLESCANO', '', '', '', 'REFI', '2021-31-05 10:27:43', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 454, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 36701303', '191200', '', '1 - Ag 1ra', 'EMACIEL', '', '', '', 'REFI', '2021-31-05 10:27:44', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 455, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 34689197', '59100', '', '2 - Ag 2ra', 'SALAYETA', '', '', '', 'REFI', '2021-31-05 10:27:45', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 456, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 31897655', '57000', '', '1 - Ag 1ra', 'CEZAPATA', '', '', '', 'REFI', '2021-31-05 10:27:46', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 457, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 36140923', '48000', '', '1 - Ag 1ra', 'PERNICO', '', '', '', 'REFI', '2021-31-05 10:27:47', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 458, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 25814145', '73000', '', '2 - Ag 2ra', 'RVICEN', '', '', '', 'REFI', '2021-31-05 10:27:48', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 459, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 42680994', '49400', '', '2 - Ag 2ra', 'GSOBRAL', '', '', '', 'REFI', '2021-31-05 10:27:48', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 460, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 41669538', '63400', '', '2 - Ag 2ra', 'RVICEN', '', '', '', 'REFI', '2021-31-05 10:27:49', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 461, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 39470973', '90000', '', '2 - Ag 2ra', 'PAPPALAR', '', '', '', 'REFI', '2021-31-05 10:27:50', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 462, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 11155314', '58300', '', '2 - Ag 2ra', 'SALAYETA', '', '', '', 'REFI', '2021-31-05 10:27:52', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "['OP_BBVA', 463, '', '2021-28-05 00:00:00', '', 'FRANCES_2012', 'FRANCES_2012', 'DNI 11131951', '56100', '', '2 - Ag 2ra', 'RLESCANO', '', '', '', 'REFI', '2021-31-05 10:27:52', 'MO&PC']\n",
+      "Insert Finish!\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.functions_ia import *\n",
+    "import time\n",
+    "from gspread_formatting  import *\n",
+    "from datetime import datetime\n",
+    "#me me conecto a la spreadsheet y agarro sus datos\n",
+    "key = \"1Ed0M09j0yk2LCLU0sBmAUximavxcZoesNmDd1w25TC8\"\n",
+    "sheet_name = \"REFI (PAG_UNIF)\"\n",
+    "sheet_name2 = \"REFI(HISTORICO)\"\n",
+    "gc = connect_spreadsheets()\n",
+    "sh = gc.open_by_key(key)\n",
+    "worksheet = sh.worksheet(sheet_name)\n",
+    "worksheet2 = sh.worksheet(sheet_name2)\n",
+    "\n",
+    "wks_data = worksheet.get_all_values()\n",
     "#me conecto a la base de datos\n",
     "cnxn = connect_database() #genero la conexion con la db\n",
     "\n",
     "#inserto los datos de la spreadsheet en la db\n",
     "cursor = cnxn.cursor()\n",
     "\n",
-    "fmt = cellFormat(backgroundColor=color(0, 1, 0) )#color de la celda\n",
+    "#agarro el ultimo id pago \n",
+    "query_ = \"SELECT MAX(ID_PAGO) FROM ACTIVE.DBO.[PAGOS_UNIFICADOS] WHERE TIPO_PAGO ='REFI'\"\n",
+    "max_id_pago = cursor.execute(query_).fetchall()[0][0] #el ultimo id_pagos\n",
+    "\n",
+    "\n",
+    "#me conecto a la base de datos\n",
+    "cols = wks_data[0]\n",
+    "\n",
+    "#supervisores  gente a la que se le envia el mail en caso exitoso\n",
+    "supervisores = ['vanessa.fondado@mopc.cc','nicolas.rodriguez@mopc.cc','luis.castillo@mopc.cc','esteban.encina@mopc.cc','Nicolas.Caruso@mopc.cc']\n",
+    "\n",
+    "fmt = cellFormat(backgroundColor=color(0, 1, 0) )\n",
+    "resultados= []\n",
     "\n",
     "#inserto fila por fila en la base de datos\n",
     "for i in range(1,len(wks_data)):\n",
-    "    query = f\"BEGIN IF NOT EXISTS (SELECT * FROM ACTIVE.DBO.PERIODOS_TABLEROS WHERE PERIODO = '{wks_data[i][3]}') BEGIN INSERT INTO ACTIVE.DBO.PERIODOS_TABLEROS (IDCLIENTE, MES, AÑO, PERIODO, FINICIO, FFIN) VALUES {tuple(wks_data[i])} END END\"\n",
-    "    try:\n",
-    "        cursor.execute(query)\n",
-    "        cnxn.commit()\n",
-    "        format_cell_range(worksheet, f'{i+1}', fmt)\n",
-    "        print('Insert Finish!')\n",
-    "    except: \n",
-    "        print(\"No se pudo insertar\")\n",
-    "cnxn.close()\n"
+    "    \n",
+    "    values = wks_data[i]\n",
+    "    fecha_pago = datetime.strptime(values[cols.index(\"FECHA_PAGO\")], \"%Y-%m-%d\").strftime(\"%Y-%d-%m %H:%M:%S\")\n",
+    "    values[cols.index('FECHA_CARGA')] = time.strftime(\"%Y-%d-%m %H:%M:%S\", time.localtime()) # fecha carga el tiempo actual\n",
+    "    values[cols.index('ID_PAGO')] = max_id_pago + i #le iserto el id-pago\n",
+    "    values[cols.index('EMPRESA')] = 'MO&PC' #este valor es fijo\n",
+    "    values[cols.index('TIPO_PAGO')] = 'REFI' #este valor es fijo\n",
+    "    values[cols.index(\"FECHA_PAGO\")] = fecha_pago\n",
+    "    print(values)\n",
+    "    idmoroso = values[cols.index(\"IDMOROSO\")]\n",
+    "    query = f\"BEGIN IF NOT EXISTS (SELECT * FROM ACTIVE.DBO.PAGOS_UNIFICADOS WHERE TIPO_PAGO ='REFI' AND FECHA_PAGO = '{fecha_pago}' AND IDMOROSO = '{idmoroso}') BEGIN INSERT INTO ACTIVE.DBO.PAGOS_UNIFICADOS (FUENTE_PAGO, ID_PAGO, RUC, FECHA_PAGO, FECHA_REMESA, DESTINATARIO, IDCLIENTE, IDMOROSO, MONTO, HONORARIOS, FILTROA, FILTROB, FILTROC,DEUDA_TOTAL, DEUDA_VENCIDA, TIPO_PAGO, FECHA_CARGA, EMPRESA) VALUES {tuple(values)} END END\"\n",
+    "    cursor.execute(query)\n",
+    "    cnxn.commit()\n",
+    "    format_cell_range(worksheet, f'{i+1}', fmt)\n",
+    "    print('Insert Finish!')\n",
+    "    #worksheet.delete_row(i+1)\n",
+    "    resultados.append(1)\n",
+    "\n",
+    "print(resultados)\n",
+    "# me fijo si todas las filas fueron insertadas correctamente. Si no, se envia un mail automatico avisando\n",
+    "if sum(resultados) == len(wks_data) - 1:\n",
+    "            send_mail(subject = \"REFIS: carga correcta\",\n",
+    "        body = \"Estimados, <br> Las REFIS fueron cargadas correctamente a las base de datos.<br><br>  Este correo se envía con frecuencias semanal y es automático. <br> Cualquier duda o consulta, comunicarse con ia@mopc.cc <br> Atte. <br> Equipo de Inteligencia Artificial\" ,\n",
+    "receivers=supervisores, sender=None)\n",
+    "else: \n",
+    "    send_mail(subject = \"REFIS: error\",\n",
+    "        body = \"Estimados, <br> Las REFIS no fueron cargadas correctamente.<br><br>  Este correo se envía con frecuencias semanal y es automático. <br> Cualquier duda o consulta, comunicarse con ia@mopc.cc <br> Atte. <br> Equipo de Inteligencia Artificial\" ,\n",
+    "receivers=['esteban.encina@mopc.cc','Nicolas.Caruso@mopc.cc'], sender=None)\n",
+    "    \n",
+    "cnxn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnxn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020-22-05 00:00:00'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from datetime import datetime\n",
+    "b = values[cols.index(\"FECHA_PAGO\")]\n",
+    "a = datetime.strptime(b, \"%Y-%m-%d\").strftime(\"%Y-%d-%m %H:%M:%S\")\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time.struct_time"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(time.localtime())"
    ]
   },
   {
